src/order_book_hls/solution1/.autopilot/db/priority_queue.pp.0.cpp.clang-tidy.loop-label.out.log
C:\Users\ruuud\spring2025\cse145\WORKINGPROJECTIDEA\ECE1373_2016_hft_on_fpga\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:29281:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
C:\Users\ruuud\spring2025\cse145\WORKINGPROJECTIDEA\ECE1373_2016_hft_on_fpga\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:29281:5: note: FIX-IT applied suggested code changes
C:\Users\ruuud\spring2025\cse145\WORKINGPROJECTIDEA\ECE1373_2016_hft_on_fpga\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:29295:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
C:\Users\ruuud\spring2025\cse145\WORKINGPROJECTIDEA\ECE1373_2016_hft_on_fpga\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:29295:5: note: FIX-IT applied suggested code changes
C:\Users\ruuud\spring2025\cse145\WORKINGPROJECTIDEA\ECE1373_2016_hft_on_fpga\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:29309:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
C:\Users\ruuud\spring2025\cse145\WORKINGPROJECTIDEA\ECE1373_2016_hft_on_fpga\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:29309:5: note: FIX-IT applied suggested code changes
C:\Users\ruuud\spring2025\cse145\WORKINGPROJECTIDEA\ECE1373_2016_hft_on_fpga\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:30943:7: warning: Added loop label VITIS_LOOP_1248_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1248_1: 
C:\Users\ruuud\spring2025\cse145\WORKINGPROJECTIDEA\ECE1373_2016_hft_on_fpga\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:30943:7: note: FIX-IT applied suggested code changes
C:\Users\ruuud\spring2025\cse145\WORKINGPROJECTIDEA\ECE1373_2016_hft_on_fpga\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33151:9: error: Resource with core_name: RAM_1P_BRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=bid core=RAM_1P_BRAM
        ^
C:\Users\ruuud\spring2025\cse145\WORKINGPROJECTIDEA\ECE1373_2016_hft_on_fpga\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33157:9: error: Resource with core_name: RAM_1P_BRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=ask core=RAM_1P_BRAM
        ^
C:\Users\ruuud\spring2025\cse145\WORKINGPROJECTIDEA\ECE1373_2016_hft_on_fpga\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33163:9: error: Resource with core_name: RAM_1P_BRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=bid_remove core=RAM_1P_BRAM
        ^
C:\Users\ruuud\spring2025\cse145\WORKINGPROJECTIDEA\ECE1373_2016_hft_on_fpga\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33169:9: error: Resource with core_name: RAM_1P_BRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=ask_remove core=RAM_1P_BRAM
        ^
C:\Users\ruuud\spring2025\cse145\WORKINGPROJECTIDEA\ECE1373_2016_hft_on_fpga\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33238:17: warning: Added loop label VITIS_LOOP_399_1:   [xilinx-label-all-loops]
                while(bid[0][0].orderID == bid_remove[0][0].orderID && bid[0][0].orderID != 0){
                ^~~~~
                VITIS_LOOP_399_1: 
C:\Users\ruuud\spring2025\cse145\WORKINGPROJECTIDEA\ECE1373_2016_hft_on_fpga\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33238:17: note: FIX-IT applied suggested code changes
C:\Users\ruuud\spring2025\cse145\WORKINGPROJECTIDEA\ECE1373_2016_hft_on_fpga\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33285:17: warning: Added loop label VITIS_LOOP_446_2:   [xilinx-label-all-loops]
                while(ask[0][0].orderID == ask_remove[0][0].orderID && ask[0][0].orderID != 0){
                ^~~~~
                VITIS_LOOP_446_2: 
C:\Users\ruuud\spring2025\cse145\WORKINGPROJECTIDEA\ECE1373_2016_hft_on_fpga\src\order_book_hls\solution1\.autopilot\db\priority_queue.pp.0.cpp:33285:17: note: FIX-IT applied suggested code changes
